# txt2img-unsupervised

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  calculate_dataset_diversity.py  captree_sweep.py  compare_sampling_steps.py  concat_pqs.py  cone_sampling.py  config.py  dedup_by_clip.py  dump_encoded_imgs.py  find_by_clip.py  find_by_name.py  gen_captree.py  gen_test_data.py  gen_training_caps.py  get-test-data.sh  hangtest.py  img_size_analysis.py  ipython_setup.py  launch-tpu.sh  ldm_autoencoder.py  load_pq_dir.py  merge_capexamples.py  munge_checkpoint.py  normalize-cfgs.sh  preprocess_images.py  preprocess_loop.py  process_imgur.py  pyproject.toml  rand_imgs_json.py  sample-dataset.sh  sample.py  sample_dset_imgs.py  sample_flow_matching.py  spherical_space_partitioning.py  sync-checkpoint-to-r2.sh  (+12 more)
.claude/agents/: test-runner-summarizer.md
.claude/skills/review-changes/: SKILL.md
.cursor/rules/: use-env.mdc
configs/flow/: 3d-medium-small.json  3d-medium.json  3d-small.json  768d-100m-12layers.json  768d-100m-16layers.json  768d-100m-4layers.json  768d-100m-8layers.json  768d-med.json  768d-small.json
configs/model/: gpt-1-128x128-singlecond.json  gpt-1-128x128-uncond.json  gpt-1-128x128.json  gpt-1-nodropout.json  gpt-1.json  gpt-2-full-128.json  gpt-2-m-128-nodropout.json  gpt-2-m-128-standard.json  gpt-2-s-128-nodropout.json  gpt-2-s-128.json  gpt-2-s.json  lorge-2nd-blog-attentiony-tall.json  lorge-2nd-blog-attentiony.json  lorge-2nd-blog-feedforwardy-fixed-tall.json  lorge-2nd-blog-feedforwardy-fixed.json  lorge-2nd-blog.json  medium-2nd-blog-attentiony.json
configs/score/: 3d-medium.json
configs/training/: base.json  flow-muon-3d-2080.json  standard-8x4090.json
docker/: Dockerfile  Dockerfile-runpod  Dockerfile-vastai  build-and-upload-images.sh  fish-pyenv.fish  get-dataset.sh  setup-repo.sh  tmux.conf
docker-vastai/: Dockerfile  fish-pyenv.fish  setup-repo.sh
ops-scripts/: setup-sfcompute-local.sh  setup-sfcompute-remote.sh  sync-checkpoint-to-r2.sh
paper/: Makefile  star figure.xcf  star_figure.py  text_to_image_no_text.bib  text_to_image_no_text.tex
test-images/: devil me.codes.npy  devil me.convolved_embedded_codes.npy  devil me.embedded_codes.npy  devil me.full_decode.npy  devil me.latents.npy  painty lady.codes.npy  painty lady.convolved_embedded_codes.npy  painty lady.embedded_codes.npy  painty lady.full_decode.npy  painty lady.latents.npy
txt2img_unsupervised/: adaptive_gradient_clip.py  adaptive_gradient_skip.py  cap_sampling.py  checkpoint.py  config.py  conftest.py  coordinate_check.py  flow_matching.py  function_weighted_flow_model.py  gen_geo_samples.py  gen_training_caps.py  gpu_check.py  ldm_autoencoder.py  learned_schedule.py  load_pq_dir.py  muon.py  paramcount.py  parametric_weighted_flow_model.py  rotating_field_animation.py  sample.py  schedule_free_adoptw.py  score_matching.py  spherical_space_partitioning.py  test_vmf.py  test_vmf_mixture.py  train_data_loading.py  training_infra.py  training_visualizations.py  transformer_model.py  visualize_field.py  vmf.py  vmf_mixture.py
