[tool.poetry]
name = "txt2img-unsupervised"
version = "0.1.0"
description = ""
authors = ["Echo Nolan <echo@echonolan.net>"]
license = "BSD3"
readme = "README.md"

[tool.poetry.dependencies]
CloseableQueue-py3 = "^0.9.2"
dacite = "^1.8.1"
datasets = "^3.0.1"
einops = "^0.7.0"
flash-attention-jax = { git = "https://github.com/enolan/flash-attention-jax.git", rev = "20621388795614de137c159a5c07abec5c475388"}
flax = "^0.8.3"
imageio-ffmpeg = "^0.4.8"
infinidata = { url = "https://github.com/enolan/infinidata/releases/download/v0.0.1-alpha2/infinidata-0.0.1a2-cp311-cp311-manylinux_2_34_x86_64.whl" }
internetarchive = "^3.5.0"
numpy = "1.*" # 2.x series is out, should probably upgrade at some point.
omegaconf = "^2.3.0"
# TODO: use regular release of optax
# we can get rid of my special optax branch and use optax.contrib.schedule_free_adamw instead of the use_first_moment=False hack
# but the schedule_free_adamw function isn't in a release yet, and my code that makes donating the train state work isn't either.
#optax = { git = "https://github.com/enolan/optax.git", branch = "txt2img-unsupervised-schedule-free", rev = "ba5ca3a9f1b7436849b94a8acf28a2fb32248fee"}
#optax = { git = "https://github.com/google-deepmind/optax.git", rev = "8b599cc2ca6fb271220ae3b25f28baf82684357f"}
optax = { git = "https://github.com/enolan/optax.git", branch = "fix-schedule-free-donate", rev = "b60629df6d0323db984a425ca114a11ee1f012d9"}
orbax-checkpoint = "^0.5.10"
pillow = "^9.5.0"
pytest = "^7.3.1"
python = "^3.11.13"
pytorch-lightning = "^2.0.2"
sortedcontainers = "^2.4.0"
torch = {url = "https://download.pytorch.org/whl/cpu/torch-2.0.1%2Bcpu-cp311-cp311-linux_x86_64.whl"}
transformers = "^4.34.1"
wandb = "^0.17.9" # TODO try upgrading, latest is 0.18.3
warcat = "^2.2.5"
xdg-base-dirs = "^6.0.1"
flash-attn-jax = "^0.2.2"
rasterio = "^1.4.3"
seaborn = "^0.13.2"

[tool.poetry.group.cuda.dependencies]
jax = {extras = ["cuda12"], version = "^0.4.33"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flameprof = "^0.4"
hypothesis = {extras = ["numpy"], version = "^6.92.2"}
ipython = "^8.14.0"
matplotlib = "^3.7.1"
memray = "^1.11.0"
mypy = "^1.3.0"
types-pillow = "^9.5.0.4"
types-tqdm = "^4.65.0.1"
py-spy = "^0.4.0"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
